# tdsp_template

./: .gitattributes  .gitignore  Dockerfile  README.md  main.py  main_api.py  main_streamlit.py  pyproject.toml  requirements.txt
data/: sample_input.xlsx
data/processed/: metadata.json  preprocessor.joblib
data/selected/: metadata_selection.json
docs/business_understanding/: project_charter.md
docs/data/: data_definition.md  data_dictionary.md  data_summary.md
docs/deployment/: deploymentdoc.md
docs/modeling/: baseline_models.md  econometric_interpretation.md  mlflow_tracking.md  model_report.md
experiments/api_showcase/: desktop.ini
experiments/mlflow_showcase/: desktop.ini
experiments/streamlit/: desktop.ini
models_fast/: gradient_boosting.joblib  lasso.joblib  linear_predictive.joblib  ridge.joblib  training_report.csv
notebooks/: showcase_eda.ipynb  showcase_mlflow.ipynb  showcase_modeling.ipynb
notrebooks/: showcase_eda.ipynb  showcase_modeling.ipynb
scripts/api/: __init__.py  app.py  artifacts.py  routes.py  schemas.py
scripts/app/: __init__.py  artifacts.py  schemas.py
scripts/data_acquisition/: main.py
scripts/eda/: main.py
scripts/evaluation/: main.py
scripts/feature_selection/: main.py
scripts/mlflow_utils/: __init__.py  tracking.py
scripts/preprocessing/: main.py
scripts/training/: data_utils.py  main.py  model_registry.py  training_pipeline.py
src/nombre_paquete/: __init__.py
src/nombre_paquete.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/nombre_paquete/database/: __init__.py
src/nombre_paquete/evaluation/: __init__.py
src/nombre_paquete/models/: __init__.py
src/nombre_paquete/preprocessing/: __init__.py
src/nombre_paquete/training/: __init__.py
(+1 files in other folders)
