[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "nombre_paquete"
version = "0.1.0"
authors = [{name = "autor1", email = "correo@correo.com"}]
description = "Descripción del proyecto"
requires-python = ">3.8"
dependencies = [
    "fastapi>=0.124.2",
    "favicon>=0.7.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.7.5",
    "numpy",
    "pandas>=2.0.3",
    "pip>=25.0.1",
    "pmdarima>=2.0.4",
    "prophet>=1.2.1",
    "pydantic>=2.10.6",
    "scikit-learn>=1.3.2",
    "statsmodels>=0.14.1",
    "uvicorn>=0.33.0",
]

[tool.setuptools.packages.find]
where = ["src/"]
