[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "nombre_paquete"
version = "0.1.0"
authors = [{name = "autor1", email = "correo@correo.com"}]
description = "Descripción del proyecto"
requires-python = ">3.8"
dependencies = [
    "matplotlib>=3.7.5",
    "numpy",
    "pandas>=2.0.3",
    "scikit-learn>=1.3.2",
    "scipy>=1.10.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.23.0",
    "streamlit>=1.33.0",
    "openpyxl>=3.1.0",
]

[tool.setuptools.packages.find]
where = ["src/"]
